--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="dialog_reminder_delete">Delete</string>
 
     <!--Base application theme - Help Dialog-->
-    <string name="dialog_help" translatable="false">
+    <string name="dialog_help">
         Gestures \n\n\n
         Single tap - edit the item \n\n
         Swipe left - delete the item \n\n
@@ -130,10 +130,10 @@
     <string name="label_add_new_bag">Tap the \"+\" button below to create a new bag</string>
 
     <!--Empty Item Screen-->
-    <string name="title_screen_empty_item" translatable="false">PackStar</string>
-    <string name="image_empty_item_description" translatable="false">robot hiding behind a bag</string>
-    <string name="label_no_entry_item" translatable="false">There\'s nothing here</string>
-    <string name="label_no_entry_item2" translatable="false">You have not added anything yet</string>
-    <string name="label_add_new_item" translatable="false">Tap the \"+\" button below to create a new item</string>
+    <string name="title_screen_empty_item">PackStar</string>
+    <string name="image_empty_item_description">robot hiding behind a bag</string>
+    <string name="label_no_entry_item">There\'s nothing here</string>
+    <string name="label_no_entry_item2">You have not added anything yet</string>
+    <string name="label_add_new_item">Tap the \"+\" button below to create a new item</string>
 
 </resources>
