List bag - reminder - new bullet - changing colour. - comments - new bullet - changing colour.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
         Gestures \n\n\n
         Single tap - edit the item \n\n
         Swipe left - delete the item \n\n
-        Drag and Drop - reorganize items
+        Drag and Drop - reorganize items \n\n
     </string>
 
 
