--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,16 +91,16 @@
     <string name="menu_dots_share">Share</string>
     <string name="list_bag_popup_delete">Bag deleted</string>
     <string name="list_bag_comment_empty">No comments. To add one, edit your bag</string>
-    <string name="menu_dots_description" translatable="false">Menu</string>
-    <string name="bullet_no_comment" translatable="false">Bullet gray</string>
-    <string name="bullet_with_comment" translatable="false">Bullet orange</string>
-    <string name="bullet_no_reminders" translatable="false">Bullet orange</string>
-    <string name="bullet_with_reminders" translatable="false">Bullet orange</string>
-    <string name="button_add_items" translatable="false">Add items button</string>
-    <string name="bullet_overweight" translatable="false">Bullet red</string>
-    <string name="label_no_comments" translatable="false">No comments</string>
-    <string name="label_no_reminders" translatable="false">No reminders</string>
-    <string name="label_overweight" translatable="false">OVERWEIGHT</string>
+    <string name="menu_dots_description">Menu</string>
+    <string name="bullet_no_comment">Bullet gray</string>
+    <string name="bullet_with_comment">Bullet orange</string>
+    <string name="bullet_no_reminders">Bullet orange</string>
+    <string name="bullet_with_reminders">Bullet orange</string>
+    <string name="button_add_items">Add items button</string>
+    <string name="bullet_overweight">Bullet red</string>
+    <string name="label_no_comments">No comments</string>
+    <string name="label_no_reminders">No reminders</string>
+    <string name="label_overweight">OVERWEIGHT</string>
 
     <!--Create Item Screen-->
     <string name="title_screen_create_item">Add item</string>
