--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
         Gestures \n\n\n
         Single tap - edit the item \n\n
         Swipe left - delete the item \n\n
-        Drag and Drop - reorganize items \n\n
+        Drag and Drop - reorganize items
     </string>
 
 
@@ -61,7 +61,7 @@
     <string name="edit_text_description_bag_comment">Delete comment</string>
     <string name="fab_text">Save</string>
     <string name="fab_description">Save bag</string>
-    <string name="text_view_reminder">No reminders</string>
+    <string name="text_view_reminder" translatable="false">Add reminder</string>
     <string name="ic_reminder_description">Reminder icon</string>
     <string name="ic_calendar_description">Calendar icon</string>
     <string name="ic_add_comment_description">Add comment icon</string>
