Reminder - Title and description changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,8 +95,12 @@
     <string name="button_add_items">Add items button</string>
     <string name="bullet_overweight">Bullet red</string>
     <string name="label_no_comments">No comments</string>
+    <string name="label_read_comment" translatable="false">Read comment</string>
     <string name="label_no_reminders">No reminders</string>
     <string name="label_overweight">OVERWEIGHT</string>
+
+
+
 
     <!--Create Item Screen-->
     <string name="title_screen_create_item">Add item</string>
