Translation to Estonian List bag screen - label read comment

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -70,7 +70,7 @@
     <string name="label_bag_date">Reisi kuupäev</string>
     <string name="label_bag_weight">Reisikoti kogukaal</string>
     <string name="label_bag_item">Toode</string>
-    <string name="label_bag_items">Tooted</string>
+    <string name="label_bag_items">Toodet</string>
     <string name="label_add_item">Lisa toode</string>
     <string name="menu_dots_edit">Muuda</string>
     <string name="menu_dots_delete">Kustuta</string>
@@ -85,6 +85,7 @@
     <string name="button_add_items">Nupp lisa toode</string>
     <string name="bullet_overweight">Punane täpp</string>
     <string name="label_no_comments">Kommentaar puudub</string>
+    <string name="label_read_comment">Loe kommentaari</string>
     <string name="label_no_reminders">Meeldetuletus puudub</string>
     <string name="label_overweight">ÜLEKAAL</string>
 
