--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,26 +4,32 @@
     <!-- Base application -->
     <string name="app_name">PackStar</string>
 
-    <!--Base application theme - Discard Dialog-->
+    <!--Base application theme - Discard dialog-->
     <string name="dialog_title">Discard your changes?</string>
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_discard">Discard</string>
 
-    <!--Base application theme - Comment Dialog-->
+    <!--Base application theme - Comment dialog-->
     <string name="dialog_ok" translatable="false">OK</string>
 
-    <!--Base application theme - Discard Dialog-->
+    <!--Base application theme - Reminder dialog-->
     <string name="dialog_reminder_title">Which action would you like to take?</string>
     <string name="dialog_reminder_edit">Edit</string>
     <string name="dialog_reminder_delete">Delete</string>
 
-    <!--Base application theme - Help Dialog-->
+    <!--Base application theme - Help dialog-->
     <string name="dialog_help">
         Gestures \n\n\n
         Single tap - edit the item \n\n
         Swipe left - delete the item \n\n
         Drag and Drop - reorganize items
     </string>
+
+    <!--Base application theme - Discard dialog-->
+    <string name="dialog_delete_title" translatable="false">Delete this bag?</string>
+    <string name="dialog_delete_cancel" translatable="false">Cancel</string>
+    <string name="dialog_delete_delete" translatable="false">Delete</string>
+
 
     <!--Base application theme - OverSystemWeight Dialog-->
     <string name="dialog_over_system_weight">Maximum system weight is 99kg</string>
