--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -98,7 +98,7 @@
     <string name="bullet_overweight">Bullet red</string>
     <string name="label_no_comments">Sem comentário</string>
     <string name="label_read_comment">Leia o comentário</string>
-    <string name="label_no_reminders">Sem lembretes</string>
+    <string name="label_no_reminders">Sem lembrete</string>
     <string name="label_overweight">Excesso de peso</string>
 
     <!--Create Item Screen-->
